<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.wangbaiyuan.translate.MainActivity">
    <item
        android:id="@+id/action_notelist_menu_copy"
        android:orderInCategory="100"
        android:title="@string/action_notelist_menu_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notelist_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notelist_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"/>

</menu>