<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.wangbaiyuan.translate.MainActivity">
    <item
        android:id="@+id/action_add_note"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_activity_new_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_creatShortCut"
        android:orderInCategory="100"
        android:title="@string/action_creatShortCut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
